Bug 337291 - Auto detect server settings feature doesn't use selected port when creating an SMTP account
Summary: Auto detect server settings feature doesn't use selected port when creating a...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 4.13.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-09 20:33 UTC by Ian Stanistreet
Modified: 2014-07-10 07:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Stanistreet 2014-07-09 20:33:31 UTC
When setting up a new SMTP account, the auto-detect feature probes the server for settings using port 25, even when a different port has been selected in the dialogue.

Additionally, in the default case where no other port has been selected, the auto-detect should try the mail submission (MSA) port (587) as well as the MTA port 25.  587 is the standard (if perhaps still less common) port for what kmail is doing, mail submission.

Reproducible: Always

Steps to Reproduce:
0. Get a mail account on a server that uses the MSA port 587.
1. Open Kmail configuration dialogue and go to Accounts section, Sending tab.
2. Click the 'Add' button, select SMTP and give the account a name.
3. Enter the account information.  In the Advanced tab, enter port 587.
4. Click the 'Auto Detect' button.
Actual Results:  
The auto-detect action failed to detect the correct server settings and said that authentication is not supported by the server (my mail server doesn't accept authentication on port 25).  Kmail didn't try the port I configured, 587.

Expected Results:  
Kmail should try to use the port that is entered by the user.  Additionally, it should try port 587 by default as well as port 25.

When the auto-detect failed to work correctly (my server doesn't accept authenticated mail submission on port 25) I checked my server logs and saw that kmail was only trying port 25.
Comment 1 Laurent Montel 2014-07-10 06:55:51 UTC
It's ok to debug
but I don't have this type of server...
So I can confirm/debug this bug.
Comment 2 Laurent Montel 2014-07-10 07:37:16 UTC
Git commit e405d4624be9c30325c881f4337780ea9df2b545 by Montel Laurent.
Committed on 10/07/2014 at 07:36.
Pushed by mlaurent into branch 'KDE/4.13'.

Fix Bug 337291 - Auto detect server settings feature doesn't use selected port when creating an SMTP account

Try to port that user added.
FIXED-IN: 4.13.3

M  +6    -0    mailtransport/smtpconfigwidget.cpp

http://commits.kde.org/kdepimlibs/e405d4624be9c30325c881f4337780ea9df2b545
Comment 3 Laurent Montel 2014-07-10 07:38:08 UTC
I added check against port that you enter.
(but can't verify if it will work as you want as my smtp account accepts port 25)