Fix Bug 337291 - Auto detect server settings feature doesn't use selected port when creating an SMTP account

Try to port that user added.
FIXED-IN: 4.13.3
BUG: 337291